<resources>
    <string name="app_name">AfrocamgistLab</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_afroswagger">Afroswagger</string>
    <string name="menu_afrotalent">Afrotalent</string>
    <string name="menu_most_popular">Most Popular</string>
    <string name="addPost">Add a new post</string>
    <string name="post_image">Post Image</string>
    <string name="post_like_icon">Post Like Icon</string>
    <string name="post_share_icon">Post Share</string>
    <string name="post_comment_icon">Post comment</string>
    <string name="post_report_icon">Report Post</string>
    <string name="menu_dots">⋮</string>
    <string name="author_description">Post Description</string>
    <string name="post_text">Post text goes here</string>
    <string name="post_author">Omotayo</string>
    <string name="avatar">User avatar</string>
    <string name="font_size">14sp</string>
    <string name="add_comment">Add comment...</string>
    <string name="send">Send</string>
    <string name="hint_comment">Add Comment</string>
    <string name="comment">Comment</string>
    <string name="comment_label">Comment</string>
    <string name="image_profile">Image Profile</string>
    <string name="comment_like">Like</string>
    <string name="dot">.</string>
    <string name="comment_replay">Reply</string>
    <string name="divider">divider</string>
    <string name="edit_comment">Edit</string>
    <string name="delete_comment">Delete</string>
    <string name="update_comment">Update</string>
    <string name="add_post">Post</string>
    <string name="upload">Upload</string>
    <string name="write_a_post">Write a post</string>
    <string name="upload_image_video">upload image/video</string>
    <string name="post">Add Post</string>
    <string name="me">Omotayo</string>
</resources>