<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="6dp"
    android:background="@drawable/detail_bg_content"
    android:paddingTop="@dimen/small_dim"
    android:paddingBottom="@dimen/small_dim">

    <TextView
        android:id="@+id/post_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_dim"
        android:layout_marginTop="@dimen/smaller_dim"
        android:text="@string/post_author"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/author_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_dim"
        android:layout_marginTop="@dimen/smaller_dim"
        android:layout_marginEnd="@dimen/smaller_dim"
        android:text="@string/author_description"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_author" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/smaller_dim"
        android:padding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/author_description">

        <ImageView
            android:id="@+id/post_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/media_height"
            android:layout_marginTop="@dimen/small_dim"
            android:contentDescription="@string/post_image"
            app:srcCompat="@drawable/ic_launcher_background" />

        <VideoView
            android:id="@+id/post_video"
            android:layout_width="match_parent"
            android:layout_height="@dimen/media_height"
            android:layout_marginTop="@dimen/small_dim"
            android:contentDescription="@string/post_image"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_launcher_foreground" />
    </FrameLayout>

    <ImageView
        android:id="@+id/user_avatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/big_dim"
        android:layout_marginTop="@dimen/small_dim"
        android:contentDescription="@string/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:srcCompat="@mipmap/ic_filled_person"
        tools:src="@mipmap/ic_filled_person" />

    <TextView
        android:id="@+id/post_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_dim"
        android:layout_marginTop="@dimen/smaller_dim"
        android:layout_marginEnd="@dimen/big_dim"
        android:text="@string/post_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/user_avatar"
        app:layout_constraintTop_toTopOf="@+id/user_avatar" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_dim"
        android:layout_marginTop="@dimen/smaller_dim"
        android:orientation="horizontal"
        android:padding="@dimen/smaller_dim"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_avatar"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/post_like"
            android:layout_width="@dimen/img_button_dim"
            android:layout_height="@dimen/img_button_dim"
            android:layout_marginStart="@dimen/smaller_dim"
            android:layout_marginEnd="@dimen/smaller_dim"
            android:clickable="true"
            android:contentDescription="@string/post_like_icon"
            android:focusable="true"
            app:srcCompat="@drawable/round_thumb_up_alt_20" />

        <TextView
            android:id="@+id/like_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/small_dim"
            android:paddingTop="@dimen/smaller_dim"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/post_comment"
            android:layout_width="@dimen/img_button_dim"
            android:layout_height="@dimen/img_button_dim"
            android:layout_marginStart="@dimen/smaller_dim"
            android:layout_marginEnd="@dimen/smaller_dim"
            android:clickable="true"
            android:contentDescription="@string/post_comment_icon"
            android:focusable="true"
            app:srcCompat="@drawable/round_rate_review_20" />

        <TextView
            android:id="@+id/comment_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/small_dim"
            android:paddingTop="@dimen/smaller_dim"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/post_share"
            android:layout_width="@dimen/img_button_dim"
            android:layout_height="@dimen/img_button_dim"
            android:layout_marginStart="@dimen/smaller_dim"
            android:layout_marginEnd="@dimen/small_dim"
            android:contentDescription="@string/post_share_icon"
            android:src="@drawable/ic_menu_share"
            tools:srcCompat="@mipmap/ic_share" />

        <ImageView
            android:id="@+id/post_report"
            android:layout_width="@dimen/img_button_dim"
            android:layout_height="@dimen/img_button_dim"
            android:clickable="true"
            android:contentDescription="@string/post_report_icon"
            android:focusable="true"
            app:srcCompat="@mipmap/ic_report"
            tools:srcCompat="@mipmap/ic_report" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_view_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:paddingStart="@dimen/smaller_dim"
        android:paddingEnd="@dimen/big_dim"
        android:text="@string/menu_dots"
        android:textAppearance="?android:textAppearanceLarge"
        app:layout_constraintBottom_toBottomOf="@+id/linear_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/linear_layout"
        app:layout_constraintTop_toTopOf="@+id/linear_layout" />

    <EditText
        android:id="@+id/edt_post_comment"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="Add comment here"
        android:background="@drawable/bg_comment"
        android:gravity="top"
        android:hint="@string/add_comment"
        android:inputType="text|textMultiLine"
        android:padding="@dimen/small_dim"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout" />

    <Button
        android:id="@+id/add_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/smaller_dim"
        android:text="@string/send"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/edt_post_comment"
        app:layout_constraintTop_toBottomOf="@+id/edt_post_comment" />

</androidx.constraintlayout.widget.ConstraintLayout>