<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostActivity">

    <EditText
        android:id="@+id/edt_post_content"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="@string/write_a_post"
        android:background="@drawable/bg_small_corner"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/write_a_post"
        android:inputType="textMultiLine"
        android:padding="@dimen/small_dim"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/upload_layout_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/bg_small_corner"
        android:orientation="horizontal"
        android:paddingStart="@dimen/small_dim"
        android:paddingTop="@dimen/smaller_dim"
        android:paddingEnd="@dimen/small_dim"
        android:paddingBottom="@dimen/smaller_dim"
        app:layout_constraintEnd_toEndOf="@+id/edt_post_content"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_post_content">

        <ImageView
            android:id="@+id/img_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="@dimen/smaller_dim"
            android:layout_marginTop="@dimen/smallest_dim"
            android:layout_marginEnd="@dimen/smaller_dim"
            android:contentDescription="@string/upload_image_video"
            app:srcCompat="@drawable/ic_menu_gallery"
            tools:src="@drawable/ic_menu_gallery" />

        <TextView
            android:id="@+id/upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/upload"
            android:textSize="18sp" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/media_contents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upload_layout_btn">

        <ImageView
            android:id="@+id/img_upload"
            android:layout_width="match_parent"
            android:scaleType="fitCenter"
            android:layout_height="350dp"
            android:contentDescription="@string/post_image"
            android:visibility="gone"
            tools:src="@drawable/ic_launcher_background" />

        <VideoView
            android:id="@+id/video_upload"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="350dp"
            android:visibility="gone" />

    </FrameLayout>

    <TextView
        android:id="@+id/add_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_txt_button"
        android:paddingLeft="@dimen/big_dim"
        android:paddingTop="@dimen/small_dim"
        android:paddingRight="@dimen/big_dim"
        android:paddingBottom="@dimen/small_dim"
        android:text="@string/add_post"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/media_contents"
        app:layout_constraintVertical_bias="0.00999999" />


</androidx.constraintlayout.widget.ConstraintLayout>