<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/comment_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/smaller_dim"
    android:orientation="vertical"
    tools:context=".CommentActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lst_comments"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:paddingBottom="@dimen/big_dim"
        android:layout_weight="1"
        android:background="@drawable/detail_bg_content"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:background="@drawable/detail_bg_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/small_dim"
        android:paddingEnd="@dimen/smaller_dim"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/edt_add_comment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints="Add comment"
            android:background="@drawable/detail_bg_content"
            android:hint="@string/hint_comment"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/add_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/smaller_dim"
            android:background="@drawable/bg_txt_button"
            android:padding="@dimen/small_dim"
            android:text="@string/comment"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/update_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/smaller_dim"
            android:background="@drawable/bg_txt_button"
            android:visibility="gone"
            android:padding="@dimen/small_dim"
            android:text="@string/update_comment"
            android:textColor="@color/white" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/comment_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>